# ritterbecken

./: .stylish-haskell.yaml  CHANGELOG.md  LICENSE  README.md  ritterbecken.cabal
app/: Dice.hs  Glyph.hs  Main.hs  Model.hs
