cabal-version:      2.4
name:               ritterbecken
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Khanh Hua
maintainer:         giakhanh2487@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable ritterbecken
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    
        Glyph
      , Model
      , Dice

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-extensions:
        OverloadedStrings
      , TupleSections
    build-depends:
        base ^>=4.14.3.0
      , mtl ^>= 2.2.2
      , random ^>= 1.2.1.1
    hs-source-dirs:   app
    default-language: Haskell2010
